filter alignment - fixed

--- a/UI/src/app/dashboard/kpi-card/kpi-card.component.css
+++ b/UI/src/app/dashboard/kpi-card/kpi-card.component.css
@@ -101,6 +101,11 @@
 ::ng-deep .kpi-filter .ng-placeholder {
     top: 5px;
 }
+
+::ng-deep .kpi-dropdown {
+  width: 180px !important;
+}
+
 .trend-box{
     flex: 0 0 33.3333%;
 }
